# Windows-Use

./: .gitignore  HUMPHI_README.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  _c.py  humphi-complete.html  main_humphi.py  package.json  pnpm-lock.yaml  pyproject.toml  system_minimal.md  test_humphi.py  turbo.json
.claude/: settings.local.json
apps/api/: package.json  wrangler.toml
apps/api/src/: index.ts  types.ts
apps/api/src/lib/: db.ts  (+5 more)
apps/web/: next.config.ts  package.json  pnpm-lock.yaml
assets/: app.js  index.html  style.css
bifrost/: requirements.txt  server.py
desktop/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src/components/: Sidebar.tsx
desktop/src/lib/: ai-engine.ts  mcp-client.ts
desktop/src/pages/: ChatPage.tsx  FilesPage.tsx  LoginPage.tsx  SettingsPage.tsx
humphi/: __init__.py  agent.py  audio.py  filter.py  gemini_live.py  groq_provider.py  logger.py  memory.py  monitor.html  overlay.py  screen_capture.py  subscriber.py
humphi/capabilities/: __init__.py  accounts.json  apps.json  bluetooth.json  display.json  files.json  network.json  printer.json  privacy.json  sound.json  system_health.json  updates.json
humphi_search/: __init__.py  cloud_backup.py  indexer.py  main.py  requirements.txt  search.py  watcher.py
tests/: test_actions.py  test_capabilities.py  test_injection.py  test_phase3.py  test_phase4.py  test_security.py
web/: _check.js
web/src/app/: layout.tsx
web/src/db/: index.ts  schema.ts
windows_use/agent/tree/: views.py
(+32 files in other folders)
